--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- <input type="radio" name="algorithm" value="fcfs" checked/> FCFS<br/> -->
       <!-- <input type="radio" name="algorithm" value="sjf"/> SJF<br/> -->
       <input type="radio" name="algorithm" id="priority" value="priority"/> Priority scheduling<br/>
-      <!-- <input type="radio" name="algorithm" value="robin"/> Round Robin -->
+      <input type="radio" name="algorithm" value="robin"/> Round Robin
     </form>
     <br>
   </div>
