--- a/index.html
+++ b/index.html
@@ -1,72 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-    <title>Priority Scheduling</title>
-</head>
-<body>
-    
-    <div>
-  <div>
-    Algorithm:
-    <form id="algorithm">
-      <!-- <input type="radio" name="algorithm" value="fcfs" checked/> FCFS<br/> -->
-      <!-- <input type="radio" name="algorithm" value="sjf"/> SJF<br/> -->
-      <input type="radio" name="algorithm" id="priority" value="priority"/> Priority scheduling<br/>
-      <input type="radio" name="algorithm" value="robin"/> Round Robin
-    </form>
-    <br>
-  </div>
-    <table id="inputTable">
-        <tr>
-            <th>Process</th>
-            <th>Arrival Time</th>
-            <th>Execute Time</th>
-            <th class="servtime">Service Time</th>
-            <th class="priority-only">Priority</th>
-        </tr>
-        <tr>
-            <td>P1</td>
-            <td>1</td>
-            <td><input class="initial exectime" type="text" value="5" /></td>
-            <td class="servtime"></td>
-            <td class="priority-only initial"><input type="text"/></td>
-        </tr>
-        <tr>
-            <td>P2</td>
-            <td>2</td>
-            <td><input class="initial exectime" value="3" /></td>
-            <td class="servtime"></td>
-            <td class="priority-only" ><input type="text"/></td>
-        </tr>
-    </table>
-    <input id="minus" style="display: inline; left: 428px; position: absolute; top: 170px;" type="button" value="-" onclick="deleteRow();" />
-    </div>
-    <input type="button" value="+" onclick="addRow();" />
-<div>
-  </div>    
-    <p id="quantumParagraph" hidden>Quantum: 
-        <input style="width: 50px;" id="quantum" type="text" value="3" />
-    </p>
-    <input type="button" value="Go" onclick="draw();" />
-    <br/><br/>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./style.css" />
+		<title>Priority Scheduling</title>
+	</head>
+	<body>
+		<div>
+			<div>
+				Algorithm:
+				<form id="algorithm">
+					<!-- <input type="radio" name="algorithm" value="fcfs" checked/> FCFS<br/> -->
+					<!-- <input type="radio" name="algorithm" value="sjf"/> SJF<br/> -->
+					<input
+						type="radio"
+						name="algorithm"
+						id="priority"
+						value="priority"
+					/>
+					Priority scheduling<br />
+					<!-- <input type="radio" name="algorithm" value="robin"/> Round Robin  -->
+				</form>
+				<br />
+			</div>
+			<table id="inputTable">
+				<tr>
+					<th>Process</th>
+					<th>Arrival Time</th>
+					<th>Execute Time</th>
+					<th class="servtime">Service Time</th>
+					<th class="priority-only">Priority</th>
+				</tr>
+				<tr>
+					<td>P1</td>
+					<td>1</td>
+					<td>
+						<input
+							class="initial exectime"
+							type="text"
+							value="5"
+						/>
+					</td>
+					<td class="servtime"></td>
+					<td class="priority-only initial"><input type="text" /></td>
+				</tr>
+				<tr>
+					<td>P2</td>
+					<td>2</td>
+					<td><input class="initial exectime" value="3" /></td>
+					<td class="servtime"></td>
+					<td class="priority-only"><input type="text" /></td>
+				</tr>
+			</table>
+			<input
+				id="minus"
+				style="display: inline; left: 428px; position: absolute; top: 156px"
+				type="button"
+				value="-"
+				onclick="deleteRow();"
+			/>
+		</div>
+		<input type="button" value="+" onclick="addRow();" />
+		<div></div>
+		<p id="quantumParagraph" hidden>
+			Quantum:
+			<input style="width: 50px" id="quantum" type="text" value="3" />
+		</p>
+		<input type="button" value="Go" onclick="draw();" />
+		<br /><br />
 
-    <fresh>
-    </fresh>
-    <p>
-    Timer: <strong id="timer"></strong> sec
-    </p>
-
-
-    <script src="./app.js"></script>
-</body>
+		<fresh> </fresh>
+		<p>Timer: <strong id="timer"></strong> sec</p>
+    <p>Average waiting time: <strong id="waiting-time"></strong> sec</p>
+		<script src="./app.js"></script>
+	</body>
 </html>
-
-    
