--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<tr>
 					<td>P2</td>
 					<td>2</td>
-					<td><input class="initial exectime" value="3" /></td>
+					<td><input class="initial exectime" value="3" type="text"/></td>
 					<td class="servtime"></td>
 					<td class="priority-only"><input type="text" /></td>
 				</tr>
