--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<th>Process</th>
 					<th>Arrival Time</th>
 					<th>Execute Time</th>
+					<th style="display: none" class="servtime">Service Time</th>
 					<th class="priority-only">Priority</th>
 				</tr>
 				<tr>
@@ -49,12 +50,14 @@
 							value="5"
 						/>
 					</td>
+					<td style="display: none" class="servtime"></td>
 					<td class="priority-only initial"><input type="text" /></td>
 				</tr>
 				<tr>
 					<td>P2</td>
 					<td>2</td>
-					<td><input class="initial exectime" value="3" type="text"/></td>
+					<td><input class="initial exectime" value="3" /></td>
+					<td style="display: none" class="servtime"></td>
 					<td class="priority-only"><input type="text" /></td>
 				</tr>
 			</table>
